# life-c

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: game.c  game.h  main.c  renderer.c  renderer.h
src/board/: board.c  board.h
src/window/: sdl_window.c  sdl_window.h
